refactor: MongoProvider as class

--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -1,7 +1,7 @@
 @layout('layouts/main')
 @section('body')
   <div>
-    <h1 class="title">Eh bilOOt!</h1>
+    <h1 class="title">Eh bilOOte!</h1>
     <p class="subtitle">
       Location de véhicules électriques à deux roues
     </p>
