feat: show rent form

--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -35,7 +35,7 @@
     }
 
     main {
-      max-width: 620px;
+      max-width: 900px;
       margin: auto;
       height: 100vh;
       padding: 0 30px;
@@ -56,10 +56,6 @@
       margin-bottom: 40px;
     }
 
-    p {
-      margin-bottom: 20px;
-    }
-
     main ul {
       list-style: none;
     }
@@ -74,6 +70,19 @@
       content: '—';
       position: absolute;
       left: 0;
+    }
+
+    form {
+      padding: 1rem;
+    }
+
+    form fieldset {
+      margin-bottom: 0.8rem;
+      padding: 0.5rem;
+    }
+
+    form select, form input {
+      display: block;
     }
   </style>
 </head>
