--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -16,7 +16,7 @@
       </li>
 
       <li>
-        <a href="/rent/motorcycle">🏍 Louer une moto électrique</a>
+        <a href="/rent/motorbike">🏍 Louer une moto électrique</a>
       </li>
     </ul>
   </div>
