--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -8,15 +8,15 @@
 
     <ul>
       <li>
-        <a href="/rent/bicycle">🚲 Louer un vélo électrique</a>
+        <a href="/rentals/bicycle">🚲 Louer un vélo électrique</a>
       </li>
 
       <li>
-        <a href="/rent/scooter">🛵 Louer un scooter électrique</a>
+        <a href="/rentals/scooter">🛵 Louer un scooter électrique</a>
       </li>
 
       <li>
-        <a href="/rent/motorbike">🏍 Louer une moto électrique</a>
+        <a href="/rentals/motorbike">🏍 Louer une moto électrique</a>
       </li>
     </ul>
   </div>
