feat: display rentals on welcome page

--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -84,6 +84,28 @@
     form select, form input {
       display: block;
     }
+
+    table {
+      margin-top: 0.5rem;
+      border-spacing: 0px;
+      border-collapse: collapse;
+      width: 100%;
+      max-width: 100%;
+      margin-bottom: 15px;
+      background-color: transparent;
+      text-align: left;
+    }
+
+    th {
+      font-weight: bold;
+      border: 1px solid #cccccc;
+      padding: 8px;
+    }
+
+    td {
+      border: 1px solid #cccccc;
+      padding: 8px;
+    }
   </style>
 </head>
 <body>
